Imports references from previous papers.

--- a/symposium.bib
+++ b/symposium.bib
@@ -1,3 +1,152 @@
+
+@misc{popovici2012coevolutionary,
+  title={Coevolutionary Principles.},
+  author={Popovici, Elena and Bucci, Anthony and Wiegand, R Paul and De Jong, Edwin D},
+  year={2012},
+  publisher={Citeseer}
+}
+
+@inproceedings{laszka2014flipthem,
+  title={FlipThem: Modeling targeted attacks with {FlipIt} for multiple resources},
+  author={Laszka, Aron and Horvath, Gabor and Felegyhazi, Mark and Butty{\'a}n, Levente},
+  booktitle={Decision and Game Theory for Security: 5th International Conference, GameSec 2014, Los Angeles, CA, USA, November 6-7, 2014. Proceedings 5},
+  pages={175--194},
+  year={2014},
+  organization={Springer}
+}
+
+@book{bonanno2018game,
+  title={Game Theory},
+  author={Bonanno, Giacomo},
+  edition={Second},
+  publisher={University of California, Davis},
+  year={2018},
+  url={http://faculty.econ.ucdavis.edu/faculty/bonanno/GT\_Book.html}
+}
+
+@article{tucker1983mathematics,
+  title={The mathematics of Tucker: A sampler},
+  author={Tucker, Albert W and Straffin Jr, Philip D},
+  journal={The Two-Year College Mathematics Journal},
+  volume={14},
+  number={3},
+  pages={228--232},
+  year={1983},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{iorio2004cooperative,
+  title={A cooperative coevolutionary multiobjective algorithm using non-dominated sorting},
+  author={Iorio, Antony W and Li, Xiaodong},
+  booktitle={Genetic and Evolutionary Computation Conference},
+  pages={537--548},
+  year={2004},
+  organization={Springer}
+}
+
+@article{sim2004game,
+  title={Game theory based coevolutionary algorithm: a new computational coevolutionary approach},
+  author={Sim, Kwee-Bo and Lee, Dong-Wook and Kim, Ji-Yoon},
+  journal={International Journal of Control, Automation, and Systems},
+  volume={2},
+  number={4},
+  pages={463--474},
+  year={2004}
+}
+
+@inproceedings{wang2006game,
+  title={Game Model Based Co-evolutionary Algorithm and its Application for Multiobjective Optimization Problems},
+  author={Wang, Gaoping and Wang, Yongji},
+  booktitle={2006 International Conference on Computational Intelligence and Security},
+  volume={1},
+  pages={274--277},
+  year={2006},
+  organization={IEEE}
+}
+
+@inproceedings{antonio2015non,
+  title={A non-cooperative game for faster convergence in cooperative coevolution for multi-objective optimization},
+  author={Antonio, Luis Miguel and Coello, Carlos A Coello},
+  booktitle={2015 IEEE Congress on Evolutionary Computation (CEC)},
+  pages={109--116},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{lung2008computing,
+  title={Computing Nash equilibria by means of evolutionary computation},
+  author={Lung, Rodica Ioana and Dumitrescu, Dan},
+  journal={Int. J. of Computers, Communications \& Control},
+  volume={3},
+  number={suppl. issue},
+  pages={364--368},
+  year={2008}
+}
+
+@article{lung2020pareto,
+  title={Pareto-based evolutionary multiobjective approaches and the generalized Nash equilibrium problem},
+  author={Lung, Rodica Ioana and Gask{\'o}, No{\'e}mi and Suciu, Mihai Alexandru},
+  journal={Journal of Heuristics},
+  volume={26},
+  pages={561--584},
+  year={2020},
+  publisher={Springer}
+}
+
+@misc{ropke2022ramo,
+  author = {Willem Röpke},
+  title = {Ramo: Rational Agents with Multiple Objectives},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/wilrop/mo-game-theory}},
+}
+
+@InProceedings{potter1994cooperative,
+  author="Potter, Mitchell A.
+  and De Jong, Kenneth A.",
+  editor="Davidor, Yuval
+  and Schwefel, Hans-Paul
+  and M{\"a}nner, Reinhard",
+  title="A cooperative coevolutionary approach to function optimization",
+  booktitle="Parallel Problem Solving from Nature --- PPSN III",
+  year="1994",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="249--257",
+  abstract="A general model for the coevolution of cooperating species is presented. This model is instantiated and tested in the domain of function optimization, and compared with a traditional GA-based function optimizer. The results are encouraging in two respects. They suggest ways in which the performance of GA and other EA-based optimizers can be improved, and they suggest a new approach to evolving complex structures such as neural networks and rule sets.",
+  isbn="978-3-540-49001-2"
+}
+
+@INPROCEEDINGS{leite2024cec,
+  AUTHOR="Rui Leite and Hernan Aguirre and Kiyoshi Tanaka",
+  TITLE="{Solving Simultaneous Continuous Multi-objective {FlipIt} Games using Co-Evolutionary Computation}",
+  booktitle="2024 IEEE Congress on Evolutionary Computation (CEC) (CEC 2024)",
+  ADDRESS="Yokohama, Japan",
+  PAGES="7.97",
+  DAYS=29,
+  MONTH=jun,
+  year=2024,
+  KEYWORDS="FlipIt; coevolution; simultaneous continuous games; multivariable multiobjective games; Game Theory"
+}
+
+@article{dijk2013flipit,
+  title={{FlipIt}: The game of ``stealthy takeover''},
+  author={Van Dijk, Marten and Juels, Ari and Oprea, Alina and Rivest, Ronald L},
+  journal={Journal of Cryptology},
+  volume={26},
+  pages={655--713},
+  year={2013},
+  publisher={Springer}
+}
+
+@phdthesis{sherfield2018flipthem,
+  title={Game theory applied to cybersecurity threat mitigation},
+  author={Sherfield, Christopher},
+  year={2018},
+  school={University of Bristol, England},
+}
+
 @article{Aguirre_2005,
 	author = {Aguirre, Hernan and Tanaka, Kiyoshi},
 	title = {Random Bit Climbers on Multiobjective MNK-Landscapes: Effects of Memory and Population Climbing},
