Sets up section references.

--- a/symposium.tex
+++ b/symposium.tex
@@ -72,10 +72,27 @@ In this paper, we present a novel optimization procedure for continuous games of
 Through experimental validations, we demonstrate the method's convergence to a finite but representative number of PSNE, with the noise decreasing as more computing resources are allocated to the optimization process.
 
 More that the concrete basic algorithmic implementation demonstrated in this work, the proposed method contributes a refined abstract procedure which we hope will guide the development of new, more efficient methods to solve game theory models of simultaneous decision, continuous decision spaces, and any number of players and solutions, with applications beyond FlipIt.
-The remainder of this paper is organized as follows: Section II details related works; Section III describes the proposed algorithm; Section IV presents the experimental setup and results; Section V discusses our findings, and Section VI concludes with potential avenues for future research.
+The remainder of this paper is organized as follows: section \ref{relatedworks} details related works; section \ref{algorithm} describes the proposed algorithm; section \ref{methodology} presents the experimental setup; section \ref{results} discusses our findings, and section \ref{conclusions} concludes with potential avenues for future research.
 
 
-\section{Conclusions and Future Works}
+\section{Related works}
+\label{relatedworks}
+
+
+\section{Proposed approach}
+\label{algorithm}
+
+
+\section{Experimental setup}
+\label{methodology}
+
+
+\section{Results and discussion}
+\label{results}
+
+
+\section{Conclusions and future works}
+\label{conclusions}
 
 TBD
 
